# mcp-neuralmemory

./: .env.example  Makefile  README.md  docker-compose.yml  verify_setup.py
.github/workflows/: publish.yml
scripts/: install.sh
server/: pyproject.toml
server/src/kg_mcp/: config.py  main.py
server/src/kg_mcp/cli/: setup.py
server/src/kg_mcp/kg/: ingest.py  repo.py  schema.cypher
server/src/kg_mcp/llm/: client.py
server/src/kg_mcp/mcp/: prompts.py  tools.py
server/tests/: test_tools.py
