[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-mcp"
version = "0.1.0"
description = "Memory/Knowledge Graph MCP Server for IDE Assistants"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "knowledge-graph", "neo4j", "llm", "ai-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "google-auth>=2.0.0",
    "rich>=13.0.0",  # For beautiful CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
kg-mcp = "kg_mcp.main:main"
kg-mcp-setup = "kg_mcp.cli.setup:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C90"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
